[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.5"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
tower = "0.4.11"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tracing = "0.1.30"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
